fixed image stretching for hero image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,7 +51,7 @@ p {
 }
 
 .hero img {
-    height: 1200px;
+    height: 800px;
     width: 100%;
     margin-bottom: 25px;
     background-size: cover;
